--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,119 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <h1>HTML Form</h1>
     <script type="text/javascript" src="./main.js"></script>
+    <form action="https://mate-academy-form-lesson.herokuapp.com/create-application">
+      <fieldset class="otstup">
+        <legend>Personal information</legend>
+        <div class="formfield otstup2">
+          <label for="surname">Surname:</label>
+          <input type="text" name="surname"
+        autocomplete="off"
+        id="surname">
+        </div>
+        <div class="formfield otstup2">
+          <label for="name">Name:</label>
+          <input type="text" name="name"
+          autocomplete="off"
+          id="name">
+        </div>
+        <div class="formfield otstup2">
+          <label for="old">How old are You?</label>
+          <input type="number" min="12"
+          max="100"
+          value="12"
+          id="old">
+        </div>
+        <div class="formfield otstup2">
+          <label for="date">Full date of birth:</label>
+          <input type="date" name="date"
+          id="date">
+        </div>
+        <div class="formfield">
+          <label for="terms">
+            I accept the term of the agreement
+          </label>
+          <input type="checkbox" name="checkbox"
+          id="terms">
+        </div>
+      </fieldset>
+      <fieldset class="otstup">
+        <legend>Registration</legend>
+        <div class="formfield otstup2">
+          <label for="mail">E-mail:</label>
+          <input type="email" name="email"
+          placeholder="email@example.com"
+          id="mail">
+        </div>
+        <div class="formfield">
+          <label for="pass">Password:</label>
+          <input type="password" name="password"
+          id="pass">
+        </div>
+      </fieldset>
+      <fieldset class="otstup">
+        <legend>An interesting fact about you!</legend>
+        <div class="formfield otstup2">
+          Do you love cats?
+          <label for="y">
+            <input type="radio" name="love"
+            value="y"
+            id="y">
+            Yes
+          </label>
+          <label for="n">
+            <input type="radio" name="love"
+            value="n"
+            id="n">
+            No
+          </label>
+        </div>
+        <div class="formfield otstup2">
+          <label for="color">What is your favorite color?</label>
+          <input type="color" id="color">
+        </div>
+        <div class="formfield otstup2">
+          <label for="time">What time do you go to bed?</label>
+          <input type="time" id="time">
+        </div>
+        <div  class="formfield otstup2">
+          <label for="cars">What are your favorite brand of cars?</label>
+          <select name="car" id="cars"
+          multiple>
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Lada">Lada</option>
+          </select>
+        </div>
+        <div class="formfield">
+          <label for="rang">How do you rate our work?</label>
+          <input type="range" id="rang"
+          name="rang"
+          value="min"
+          min="1"
+          max="10">
+        </div>
+      </fieldset>
+      <fieldset class="otstup">
+        <legend>Additional info</legend>
+        <div class="formfield otstup2">
+          <label for="com">Comments:</label>
+          <textarea name="Comments" id="com"
+          cols="15"
+          rows="2">
+          </textarea>
+        </div>
+        <div class="formfield">
+          <label for="yn">Would you recomended us?</label>
+          <select name="yn" id="yn">
+            <option value="y">yes</option>
+            <option value="n">no</option>
+          </select>
+        </div>
+      </fieldset>
+      <button type="submit">Submit</button>
+    </form>
   </body>
 </html>
+
+
